test/incremental/unused_vars.zig
pub fn main() void {
    const x = 1;
}

// error
//
// :2:11: error: unused local constant
